[tool.poetry]
package-mode = false
name = "name"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.12.2"
pytest = "^8.2.2"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
ruff = "^0.5.0"
mypy = "^1.10.1"

[tool.mypy]
python_version = "3.11"
strict = true
files = "src,tests"
ignore_missing_imports = true
disallow_subclassing_any = false
# plugins = [ "pydantic.mypy" ]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D100",     # pydocstyle: undocumented-public-module
    "D101",     # pydocstyle: undocumented-public-class
    "D102",     # pydocstyle: undocumented-public-method
    "D103",     # pydocstyle: undocumented-public-function
    "D104",     # pydocstyle: undocumented-public-package
    "D105",     # pydocstyle: undocumented-magic-method
    "D106",     # pydocstyle: undocumented-public-nested-class
    "D107",     # pydocstyle: undocumented-public-init
    "D203",     # pydocstyle: one-blank-line-before-class
    "D213",     # pydocstyle: multi-line-summary-second-line
    "ANN002",	# flake8-annotations: missing-type-args
	"ANN003",	# flake8-annotations: missing-type-kwargs
    "ANN101",   # flake8-annotations: missing-type-self
    "ANN102",   # flake8-annotations: missing-type-cls
    "ASYNC1",   # flake8-trio
    "S603",		# flake8-bandit: subprocess-without-shell-equals-true
	"S607",		# flake8-bandit: start-process-with-partial-path
	"DJ",		# flake8-django
	"EM",		# flake8-errmsg
    "G004",     # flake8-logging-format: logging-f-string
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "FIX",      # flake8-fixme
    "ERA001",   # eradicate: commented-out-code
	"PD",		# pandas-vet
	"PLR0911",	# pylint: too-many-return-statements
	"PLR0913",	# pylint: too-many-arguments
	"TRY003",	# tryceratops: raise-vanilla-args
	"NPY",		# numpy
	"AIR",		# airflow
	"RUF001",	# ruff: ambiguous-unicode-character-string
	"RUF002",	# ruff: ambiguous-unicode-character-docstring
	"RUF003",	# ruff: ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # flake8-bandit: assert
    "SLF001",   # flake8-self: private-member-access
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
